--- a/styles.css
+++ b/styles.css
@@ -21,5 +21,78 @@ Code for introduction section
 }
 
 .mainHeading{
-    color:#fff;
+    color:#170303;
+    padding:20px 20px;
+    text-align: center;
+}
+
+/*---------------------------
+Swiper Button Properties
+----------------------------*/
+.mySwiper .swiper-button-next, .mySwiper .swiper-button-prev {
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.5);
+    /*border-radius: 50%;*/
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    top: 50%;
+    padding: 20px 30px;
+    z-index: 10;
+    }
+.mySwiper .swiper-button-prev {
+        left: 180px;
+}
+.mySwiper .swiper-button-next {
+    right: 180px;
+}
+.swiper-slide {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.swiper-slide img {
+    max-width: 80%;
+    max-height: 500px;
+    object-fit: contain;
+    margin: auto;
+    display: block;
+    border-radius: 20px;
+}
+
+.choice-button1 {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-100%);
+    padding: 10px 20px;
+    background-color: #ffffff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    margin: 5px;
+}
+.choice-button2 {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(0%);
+    padding: 10px 20px;
+    background-color: #ffffff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    margin: 5px;
+}
+
+
+*, ::after{
+    box-sizing: initial;
+}
+
+.timeline1, .timeline2 {
+    display: flex;
 }
