polishing and fixing heading + margins

--- a/styles.css
+++ b/styles.css
@@ -5,19 +5,8 @@ Code for general properties
 /* ------------------------------
 Code for introduction section
 --------------------------------- */
-.introduction{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: #fff;
-    font-size: 2rem;
-    font-weight: 600;
-    text-align: center;
-    background-color: #170f0f;
-    background-position: center;
-    position: relative;
-    z-index: -1;
+.mainContainer{
+    margin-top:70px;
 }
 
 .mainHeading{
@@ -25,6 +14,8 @@ Code for introduction section
     padding:20px 20px;
     text-align: center;
 }
+
+
 
 /*---------------------------
 Swiper Button Properties
