Removed a warning in the console

--- a/styles.css
+++ b/styles.css
@@ -240,6 +240,7 @@ Main Heading Properties
     background: linear-gradient(270deg, #ff0000, #00ff00, #0000ff, #ff00ff);
     background-size: 800% 800%;
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
